--- a/JSONJQuery.html
+++ b/JSONJQuery.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div class="loader"></div>
-        <button id="button1" onclick="this.disabled=true;">get JSON</button>
         <h1>Repo Commit Count</h1>
+        <button id="button1" onclick="this.disabled=true;">Get JSON</button>
         <div class="row">
             <div id="column1">
             </div>
