--- a/assignment-4/JSONJQuery.html
+++ b/assignment-4/JSONJQuery.html
@@ -8,9 +8,18 @@
     </head>
     <body>
         <h1>Repo Commit Count</h1>
+        <h3 id="h3">What data would you like to pull? I recommend Repo_group_id</h3>
+        <div class="dropdown">
+          <span id="dropbutton">JSON keys</span>
+          <div class="dropdown-content">
+            <p id ="dropdownlist"></p>
+          </div>
+        </div>
+        <h2></h2>
         <div class="loader"></div>
-        <button id="button1" onclick="this.disabled=true;">Get JSON</button>
-        <div class="row">
+        
+        <h4 id="h4" style="margin: 0px;">Repo # &emsp;&emsp;&emsp;count</h4>
+        <div class="tablerow">
             <div id="column1">
             </div>
             <div id="bar-horzontal"></div>
